syntax = "proto3";

package auth.v1;

option go_package = "github.com/mkseven1/sso/proto/auth;authpb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// AuthService handles all authentication operations
service AuthService {
  // Login authenticates a user and returns JWT tokens
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }

  // RefreshToken issues a new access token using a refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/refresh"
      body: "*"
    };
  }

  // ValidateToken checks if a token is valid
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {
    option (google.api.http) = {
      get: "/api/v1/auth/validate"
    };
  }

  // Logout invalidates the current session
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/logout"
      body: "*"
    };
  }

  // CheckUsername verifies if a username exists
  rpc CheckUsername(CheckUsernameRequest) returns (CheckUsernameResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/check-username"
      body: "*"
    };
  }

  // ForgotUsername sends username recovery email
  rpc ForgotUsername(ForgotUsernameRequest) returns (ForgotUsernameResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/forgot-username"
      body: "*"
    };
  }

  // ForgotPassword initiates password reset flow
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/forgot-password"
      body: "*"
    };
  }

  // ResetPassword completes password reset with token
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/reset-password"
      body: "*"
    };
  }

  // GetSAMLAssertion generates SAML assertion for Google Workspace
  rpc GetSAMLAssertion(SAMLAssertionRequest) returns (SAMLAssertionResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/saml/assertion"
      body: "*"
    };
  }

  // GetUserInfo retrieves authenticated user information
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {
    option (google.api.http) = {
      get: "/api/v1/auth/user"
    };
  }
}

// Login Request and Response
message LoginRequest {
  string username = 1;
  string password = 2;
  string ip_address = 3;
  string user_agent = 4;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  string token_type = 4;
  User user = 5;
  string saml_response = 6; // Base64 encoded SAML assertion for Google
}

// Token Refresh
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

// Token Validation
message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  google.protobuf.Timestamp expires_at = 3;
}

// Logout
message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

// Username Check
message CheckUsernameRequest {
  string username = 1;
}

message CheckUsernameResponse {
  bool exists = 1;
}

// Forgot Username
message ForgotUsernameRequest {
  string email = 1;
}

message ForgotUsernameResponse {
  bool success = 1;
  string message = 2;
}

// Forgot Password
message ForgotPasswordRequest {
  string username = 1;
  string email = 2;
}

message ForgotPasswordResponse {
  bool success = 1;
  string message = 2;
  string reset_token = 3; // Sent via email, not returned in response
}

// Reset Password
message ResetPasswordRequest {
  string reset_token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

// SAML Assertion
message SAMLAssertionRequest {
  string user_id = 1;
  string relay_state = 2;
}

message SAMLAssertionResponse {
  string saml_response = 1; // Base64 encoded SAML assertion
  string relay_state = 2;
}

// Get User Info
message GetUserInfoRequest {
  string user_id = 1;
}

message GetUserInfoResponse {
  User user = 1;
}

// User model
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  bool is_active = 6;
  repeated string roles = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// Error response (for HTTP errors)
message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}